# simple-experiment

./: CMakeLists.txt  README.md
design/: cgraphicsview.xcf  engine2d_class_diagram.uxf  engine2d_event_class.uxf
engine2d/: CMakeLists.txt  cgobject.cpp  cgobject.h
src/core/: CMakeLists.txt  ccolour.cpp  ccolour.h  cdrawingtool.h  celement.cpp  celement.h  cengine2d.cpp  cengine2d.h  cevent.cpp  cevent.h  ceventmanager.cpp  ceventmanager.h  cpainttool.cpp  cpainttool.h  cpixmap.cpp  cpixmap.h  cpoint.h  crect.h  cscene.cpp  cscene.h  csceneitem.cpp  csceneitem.h  csceneview.h  csize.h  ctransform.cpp  ctransform.h  ienginedevice.h  ieventfactory.h  ieventlistener.h  ieventsource.h  igamedelegate.h  ipaintdevice.h  ipaintsurface.h  ivideodevice.h  logging.cpp  logging.h
src/core/extra/: cspriteitem.cpp  cspriteitem.h  cspritequeue.cpp  cspritequeue.h
src/core/input/: ckeylistener.cpp  ckeylistener.h
src/core/platform/linux/: cenginedevicelinux.cpp  cenginedevicelinux.h  ceventsourcesdl.cpp  ceventsourcesdl.h  ckeyeventfactorysdl.cpp  ckeyeventfactorysdl.h  cpaintdevicepseudo.cpp  cpaintdevicepseudo.h  cpaintdevicesdl.cpp  cpaintdevicesdl.h  cpaintsurfacepseudo.cpp  cpaintsurfacepseudo.h  cpaintsurfacesdl.cpp  cpaintsurfacesdl.h  crenderdevicesdl.cpp  crenderdevicesdl.h  ctexturesdl.cpp  ctexturesdl.h  cvideodevicepseudo.cpp  cvideodevicepseudo.h  cvideodevicesdl.cpp  cvideodevicesdl.h
src/core/tools/: cdigitool.cpp  cdigitool.h  cdigitsbitmap.cpp  cxbmloader.cpp  cxbmloader.h
src/core/tools/resources/: fps_num.xcf
src/engine2d/: CMakeLists.txt  cengine2d.cpp  cengine2d.h  cenginedevice.h  cenginedevicelinux.cpp  cenginedevicelinux.h  cevent.h  cgobject.cpp  cgobject.h  cpainttool.cpp  cpainttool.h  cpixelbuffer.cpp  cpixelbuffer.h  cpixmap.cpp  cpixmap.h  cscene.cpp  cscene.h  csceneitem.cpp  csceneitem.h  cvideodevicesdl.cpp  cvideodevicesdl.h  engine2d.h  ienginedevice.h  ipaintdevice.h  ipaintsurface.h  ivideodevice.h  logging.h
src/engine2d/sdl/: cpaintdevicesdl.cpp  cpaintdevicesdl.h  cpaintsurfacesdl.cpp  cpaintsurfacesdl.h  cpixelbuffersdl.cpp  cpixelbuffersdl.h  cvideodevicesdl.cpp  cvideodevicesdl.h
tests/gtest/engine2d/: CMakeLists.txt  csceneitemtestfactory.cpp  csceneitemtestfactory.h  gmockcscene.h  gmockcsceneitem.h  testcgobject.cpp  testcrect.cpp  testcscene.cpp  testcsceneitem.cpp  testcsceneitemfactory.cpp  testcsceneitemfactory.h  testcspritequeue.cpp
tests/gtest/engine2d/resources/: colour_checker.c  colour_checker.data  colour_checker.xcf
tests/quicktests/ballmove/: CMakeLists.txt  ball.xcf  testballmove.cpp
tests/quicktests/rotatingballs/: CMakeLists.txt  background.xcf  ball_big.xcf  ball_small.xcf  rotatingballs.cpp
